[build-system]
requires = ["setuptools >= 40.9.0", "tqdm", "argparse", "requests", "rich", "tomli", "scikit-learn", "pandas", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "reait"
version = "0.0.15"
readme = "README.md"
classifiers=[
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent"
]
dependencies = [
    "tqdm",
    "requests",
    "rich",
    "argparse",
    "tomli",
    "scikit-learn",
    "pandas",
    "numpy",
]
keywords = ["reverse", "engineering", "reveng.ai", "reveng", "machine", "learning", "binary", "analysis", "ml", "ai", "vector", "embedding"]

[project.urls]
"Homepage" = "https://github.com/RevEng-AI/reait"
"Bug Tracker" = "https://github.com/RevEng-AI/reait/issues"
"Organisation Homepage" = "https://reveng.ai"
"Documentation" = "https://docs.reveng.ai"
