[build-system]
requires = ["setuptools >= 40.9.0", "argparse", "requests", "rich", "tomli", "pandas", "numpy", "scipy", "lief", "scikit-learn"]
build-backend = "setuptools.build_meta"

[project]
name = "reait"
version = "1.0.0"
readme = "README.md"
classifiers=[
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent"
]
dependencies = [
    "requests",
    "rich",
    "argparse",
    "tomli",
    "pandas",
    "numpy",
    "scipy",
    "lief",
    "scikit-learn",
]
keywords = ["reverse", "engineering", "reveng.ai", "reveng", "machine", "learning", "binary", "analysis", "ml", "ai", "vector", "embedding"]
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
  {name = "James Patrick-Evans", email = "james@reveng.ai"},
]
maintainers = [
  {name = "James Patrick-Evans", email = "james@reveng.ai"},
]

[project.urls]
"Homepage" = "https://github.com/RevEng-AI/reait"
"Bug Tracker" = "https://github.com/RevEng-AI/reait/issues"
"Organisation Homepage" = "https://reveng.ai"
"Documentation" = "https://docs.reveng.ai"

[project.scripts]
reait = "reait.main:main"
