[build-system]
requires = ["setuptools >= 40.9.0", "argparse", "requests", "rich", "tomli", "pandas", "numpy", "scipy", "lief", "scikit-learn"]
build-backend = "setuptools.build_meta"

[project]
name = "reait"
version = "1.2.1"
readme = "README.md"
classifiers=[
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent"
]
dynamic = ["dependencies"]
keywords = ["reverse", "engineering", "reveng.ai", "reveng", "machine", "learning", "binary", "analysis", "ml", "ai", "vector", "embedding"]
description = "RevEng.AI Toolkit and Python API"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  {name = "James Patrick-Evans", email = "james@reveng.ai"},
]
maintainers = [
  {name = "James Patrick-Evans", email = "james@reveng.ai"},
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt",]}

[project.urls]
"Homepage" = "https://github.com/RevEng-AI/reait"
"Bug Tracker" = "https://github.com/RevEng-AI/reait/issues"
"Organisation Homepage" = "https://reveng.ai"
"Documentation" = "https://docs.reveng.ai"

[project.scripts]
reait = "reait.main:main"
